--- a/src/components/main/offers/object/modal.css
+++ b/src/components/main/offers/object/modal.css
@@ -25,12 +25,14 @@
     vertical-align: middle;
     max-width: 100%;
     max-height: 100%;
-    height: calc(100vh - 50px);
+    height: auto !important;
+    /* height: calc(100vh - 50px); */
 }
 
 .modal-img img {
     width: 100%;
     height: 100%;
+    max-height: calc(100vh - 50px);
     object-fit: contain;
 }
 /* 
@@ -78,15 +80,17 @@
   width: 50px !important;
   height: 50px !important;
   z-index: 1;
+  position: absolute;
+  top: 50%;
 }
-/* 
+
 .ant-carousel .slick-next {
-    inset-inline-end: -85px !important;
+    right: -80px;
 }
 
 .ant-carousel .slick-prev {
-    inset-inline-start: -85px !important;
-} */
+    left: -80px;
+}
 
 .ant-carousel .slick-prev svg,
 .ant-carousel .slick-next svg{
