--- a/src/components/main/teasers/card.css
+++ b/src/components/main/teasers/card.css
@@ -8,10 +8,10 @@
 .teaser-tile .ant-card-body {
     padding: 0 !important;
 }
-/* 
+
 .teaser-tile .ant-card-cover {
-    height: 300px;
-} */
+    height: 150px;
+}
 
 .teaser-tile .ant-card-body .image-gallery .secondary-image > div {
     width: 200px;
