--- a/src/components/main/offers/offers.css
+++ b/src/components/main/offers/offers.css
@@ -154,6 +154,32 @@
     height: fit-content !important;
 }
 
+.object-contact {
+    text-align: center;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 20px;
+    z-index: 3;
+}
+
+.object-contact .btn {
+    background: #0ca;
+    box-shadow: 0 0 0 6px rgb(255 255 255 / 75%);
+    color: #eef3fa;
+    display: inline-flex;
+    align-items: center;
+    align-self: center;
+    height: 40px !important;
+}
+
+.object-contact .btn:hover {
+    border: none;
+    background: rgb(119, 220, 204);
+    color: #eef3fa !important;
+}
+
+
 @media screen and (max-width: 1400px) {
     .offer-page-container {
         max-width: 1200px;
