--- a/src/components/main/offers/object/modal.css
+++ b/src/components/main/offers/object/modal.css
@@ -106,6 +106,11 @@
   color: #0ca;
 }
 
+
+.slick-track {
+    display: flex !important;
+    align-items: center;
+}
 /* 
 .ant-carousel .slick-next {
     color: white;
@@ -117,6 +122,7 @@
 .ant-carousel .slick-prev::before {
     content: '';
 } */
+
 
 @media screen and (max-width: 992px) {
     
@@ -138,4 +144,26 @@
     .ant-carousel .slick-prev {
         inset-inline-start: -35px !important;
     }
+}
+
+@media screen and (max-width: 750px) {
+      
+    .ant-carousel .slick-prev,
+    .ant-carousel .slick-next {
+        display: none !important;
+    }
+
+    .ant-carousel {
+        width: 100%;
+        margin: 0;
+    }
+
+    
+.modal-close {
+    top: 10px;
+    right: 10px;
+    width: 25px;
+    height: 25px;
+}
+
 }
