--- a/src/components/main/offers/offers.css
+++ b/src/components/main/offers/offers.css
@@ -8,17 +8,17 @@
 }
 
 .object {
-    padding: 16px;
+    /* padding: 16px; */
     border-radius: 6px;
     background: #eef3fa !important;
 }
 
 .object-params {
-    padding-top: 16px;
+    padding: 16px;
 }
 
 .offer-page-title {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .offer-page-title h1 {
@@ -32,16 +32,18 @@
     color: #0ca;
     display: flex;
     align-items: center;
+    margin-bottom: 10px;
 }
 
 .image-gallery {
     display: flex;
-    border-radius: 6px;
+    border-radius: 6px 6px 0 0;
     cursor: pointer;
     overflow: hidden;
     width: auto;
     max-width: 100%;
     height: 100%;
+    max-height: 80vh;
     
 }
 
@@ -50,11 +52,11 @@
     transition: opacity .5s;
 }
 
-.primary-image div {
+.primary-image_image {
     height: 100%;
 }
 
-.primary-image div img {
+.primary-image_image img {
     width: 100%;
     height: 100%;
 }
@@ -91,13 +93,13 @@
 
 .object-params .param h3 {
     margin: 0;
-    font-size: 18px;
+    font-size: 28px;
 }
 
 .object-params .param div {
     display: flex;
     flex-wrap: wrap;
-    font-size: 17px;
+    font-size: 24px;
 }
 
 .object-params .param div div {
@@ -122,7 +124,7 @@
     background-image: url('../../../assets/icons/arrow.svg');
     padding-left: 26px;
     background-repeat: no-repeat;
-    background-position: left top 4px;
+    background-position: left top 10px;
 }
 
 .map-offer-container .leaflet-container {
@@ -157,10 +159,14 @@
 .object-contact {
     text-align: center;
     position: fixed;
-    left: 0;
-    right: 0;
+    left: 10px;
+    right: 10px;
     bottom: 20px;
     z-index: 3;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 50px;
 }
 
 .object-contact .btn {
@@ -171,11 +177,22 @@
     align-items: center;
     align-self: center;
     height: 40px !important;
+    width: 50%;
+    justify-content: center;
+    font-size: 20px;
+}
+
+.object-contact .btn-not {
+    background: rgb(239, 133, 161) !important;
+}
+
+.object-contact .btn-not:hover {
+    background: #f94f5d !important;
 }
 
 .object-contact .btn:hover {
     border: none;
-    background: rgb(119, 220, 204);
+    background: rgb(93, 241, 217);
     color: #eef3fa !important;
 }
 
@@ -204,10 +221,14 @@
     }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 500px) {
 
     .image-gallery {
         flex-direction: column;
+    }
+
+    .primary-image_image img{
+        max-height: 400px;
     }
     
     .secondary-image {
@@ -216,7 +237,7 @@
         -ms-flex-direction: row;
         flex-direction: row;
         margin-left: 0;
-        margin-top: 3px;
+        margin-top: 0;
     }
 
     .secondary-image > div {
@@ -228,6 +249,14 @@
 
     .secondary-image > div:nth-last-child(1) {
         margin-right: 0;
+    }
+
+    .object-params .param h3 {
+        font-size: 24px;
+    }
+    
+    .object-params .param div {
+        font-size: 20px;
     }
 }
 
