--- a/src/components/main/teasers/card.css
+++ b/src/components/main/teasers/card.css
@@ -19,6 +19,7 @@
 
 .teaser-tile .ant-card-body .image-gallery {
     border-radius: 6px 6px 0 0;
+    max-height: 50vh;
 }
 
 .teaser-tile-img {
@@ -111,8 +112,40 @@
     font-size: 24px;
 }
 
+.modal-feedback p {
+    margin-top: 0;
+    text-align: left;
+    width: 90%;
+}
+
 .modal-feedback textarea{
     width: 100%;
+}
+
+.image-gallery-no-photo {
+    width: 100%;
+    height: 200px;
+}
+
+.image-gallery-no-photo img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.image-count {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    display: flex;
+    font-size: 16px;
+    line-height: 18px;
+    flex-direction: row;
+    gap: 5px;
+    color: #FFF;
+    padding: 5px 8px;
+    background: rgba(26, 26, 26, 0.7);
+    border-radius: 3px;
 }
 
 @media screen and (max-width: 576px) {
