--- a/src/components/main/teasers/card.css
+++ b/src/components/main/teasers/card.css
@@ -152,4 +152,22 @@
     .teaser-tile .ant-card-cover {
         height: 250px;
     }
+
+}
+
+@media screen and (max-width: 500px) {
+    
+    .ant-card-body .image-gallery .primary-image .primary-image_image img {
+        max-height: 200px;
+        object-fit: cover;
+    }
+}
+
+
+@media screen and (max-width: 450px) {
+    
+    .teaser-tile .social-actions .social-action {
+        font-size: 20px;
+        gap: 5px;
+    }
 }
