--- a/src/components/main/offers/offers.css
+++ b/src/components/main/offers/offers.css
@@ -18,15 +18,15 @@
 }
 
 .offer-page-title {
-    margin-bottom: 10px;
+    margin: 10px 0;
 }
 
 .offer-page-title h1 {
-    font-size: 30px;
+    font-size: 35px;
 }
 
 .offer-page-title .price {
-    font-size: 24px;
+    font-size: 35px;
     font-weight: 700;
     line-height: 1.25;
     color: #0ca;
@@ -128,10 +128,21 @@
 }
 
 .map-offer-container .leaflet-container {
-    height: 400px;
+    height: 600px;
     border-radius: 6px;
     overflow: hidden;
     z-index: 1;
+}
+
+.map-offer-container h3 {
+    font-size: 28px;
+    margin-bottom: 10px;
+}
+
+.map-offer-container h5 {
+    font-size: 24px;
+    margin-top: 0;
+    margin-bottom: 10px;
 }
 
 .feedback-form-container {
@@ -202,6 +213,7 @@
 .build-params {
     display: flex;
     flex-wrap: wrap;
+    row-gap: 20px;
 }
 
 .build-params_param {
@@ -210,7 +222,6 @@
     align-items: center;
     gap: 15px;
     width: 25%;
-    margin-bottom: 20px;
 }
 
 .build-params_param_text {
@@ -220,12 +231,12 @@
 
 .build-params_param_text p {
     margin: 0;
-    font-size: 18px;
+    font-size: 24px;
 }
 
 .build-params_param_text h5 {
     margin: 0;
-    font-size: 20px;
+    font-size: 24px;
     max-width: 90%;
 }
 
@@ -292,11 +303,13 @@
         margin-right: 0;
     }
 
-    .object-params .param h3 {
+    .object-params .param h3,
+    .map-offer-container h3 {
         font-size: 24px;
     }
     
-    .object-params .param div {
+    .object-params .param div,
+    .map-offer-container h5 {
         font-size: 20px;
     }
 
@@ -306,7 +319,14 @@
 
     .build-params_param_text h5 {
         max-width: 100%;
+        font-size: 20px;
     }
+ 
+    .build-params_param_text p {
+        margin: 0;
+        font-size: 20px;
+    }
+
 
     
 }
