--- a/src/components/main/offers/offers.css
+++ b/src/components/main/offers/offers.css
@@ -35,6 +35,10 @@
     margin-bottom: 10px;
 }
 
+.offer-page-title-location {
+    font-size: 20px;
+}
+
 .image-gallery {
     display: flex;
     border-radius: 6px 6px 0 0;
@@ -52,6 +56,10 @@
     transition: opacity .5s;
 }
 
+.primary-image {
+    flex: 1;
+}
+
 .primary-image_image {
     height: 100%;
 }
@@ -59,6 +67,7 @@
 .primary-image_image img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .secondary-image {
@@ -143,6 +152,9 @@
     font-size: 24px;
     margin-top: 0;
     margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+
 }
 
 .feedback-form-container {
@@ -240,6 +252,12 @@
     max-width: 90%;
 }
 
+.update_date {
+    position: absolute;
+    right: 50px;
+    font-size: 20px;
+}
+
 
 @media screen and (max-width: 1400px) {
     .offer-page-container {
@@ -250,6 +268,14 @@
 @media screen and (max-width: 1200px) {
     .offer-page-title h1 {
         font-size: 24px;
+    }
+
+    .offer-page-title-location {
+        font-size: 17px;
+    }
+  
+    .offer-page-title .price {
+        font-size: 28px;
     }
 }
 
@@ -270,6 +296,11 @@
 
     .build-params_param {
         width: 50%;
+    }
+
+    .update_date {
+        position: relative;
+        right: auto;
     }
 }
 
