--- a/src/components/main/teasers/card.css
+++ b/src/components/main/teasers/card.css
@@ -42,8 +42,8 @@
 
 .teaser-tile .desc .title {
     font-size: 18px;
-    white-space: nowrap;
-    overflow: hidden;
+    /* white-space: nowrap; */
+    overflow: hidden; 
     color: #003073;
 }
 
