--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,8 @@
     -webkit-box-flex: 1;
     -ms-flex: 1 0 auto;
     flex: 1 0 auto;
-    position: relative;
-    top: 50px;
+    /* position: relative;
+    top: 50px; */
     background: #fff !important;
 }
 
