--- a/src/components/main/offers/offers.css
+++ b/src/components/main/offers/offers.css
@@ -139,6 +139,7 @@
 
 .map-offer-container .leaflet-container {
     height: 600px;
+    max-height: 70vh;
     border-radius: 6px;
     overflow: hidden;
     z-index: 1;
@@ -182,28 +183,26 @@
 
 .object-contact {
     text-align: center;
-    position: fixed;
-    left: 10px;
-    right: 10px;
-    bottom: 20px;
-    z-index: 3;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 15px;
+    gap: 3px;
     max-width: 1280px;
     margin: auto;
-    padding: 0 16px;
 }
 
 .object-contact .btn {
+    cursor: pointer;
+    border-radius: 5px;
     background: #0ca;
-    box-shadow: 0 0 0 6px rgb(255 255 255 / 75%);
+    border-top: 3px solid #FFF;
+    /* box-shadow: 0 0 0 6px rgb(255 255 255 / 75%); */
     color: #eef3fa;
     display: inline-flex;
+    gap: 10px;
     align-items: center;
     align-self: center;
-    height: 40px !important;
+    height: 50px;
     width: 50%;
     justify-content: center;
     font-size: 20px;
@@ -218,7 +217,6 @@
 }
 
 .object-contact .btn:hover {
-    border: none;
     background: rgb(93, 241, 217);
     color: #eef3fa !important;
 }
@@ -359,6 +357,10 @@
         font-size: 20px;
     }
 
+    
+    .object-contact .btn {
+        font-size: 18px;
+    }
 
     
 }
