--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ html {
 
 body {
   margin: 0;
+  padding-top: 50px;
   font-size: 18px;
   font-family: 'Open Sans' ,sans-serif;
   font-weight: 400;
