--- a/src/assets/styles/card.css
+++ b/src/assets/styles/card.css
@@ -54,6 +54,13 @@
     /* margin-bottom: 5px; */
 }
 
+.teaser-tile .desc .geo-shortcard {
+    display: flex;
+    flex-direction: row;
+    gap: 0;
+    align-items: center;
+}
+
 .teaser-tile .desc .geo .location {
     white-space: nowrap;
     overflow: hidden;
